# hello-world

./: .gitignore  README.md
C++/: CMakeLists.txt  chapter2.cpp  main.cpp
C++/Chapters/: CMakeLists.txt  chapter2.cpp  chapter3.cpp
MPI/: greetings  greetings.cpp
Numerical_Analysis/: CMakeLists.txt  Newton.cpp
